--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <iframe src="./charts/bubble.html" style="background-color: rgb(235, 235, 235);" height="680px" width="100%" frameborder="0"></iframe>
           </div>
           <div class="col-md-6" style="background-color: rgb(235, 235, 235); height: 680px; " >
-            <div class="donut-container" style="height: 680px;">
+            <div style="height: 680px;">
               <iframe src="./charts/bubble2.html" style="background-color: rgb(235, 235, 235);" height="680px" width="100%" frameborder="0"></iframe>
             </div>
           </div>
